src/test/resources/valid_programs/incr_decr__decr_int_simple.notc
void main() {
    int i = 23;
    i--;
    printInt(i);
    --i;
    printInt(i);


    // Behavior around zero

    int j = 1;
    j--;
    printInt(j);
    j--;
    printInt(j);
    j--;
    printInt(j);

    int k = 1;
    --k;
    printInt(k);
    --k;
    printInt(k);
    --k;
    printInt(k);
}
