src/test/resources/syntax_errors/decl_extra_comma1.notc
void main() {
    int x, y, z,;
}
